--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -15,9 +15,9 @@ dependencies:
     path: ../
 
   cupertino_icons: ^0.1.2
-  image_picker: ^0.6.7+17
+  image_picker: ^0.7.3
   video_player: ^2.0.0
-  file_picker: ^2.1.4
+  file_picker: ^3.0.0
 
 dev_dependencies:
   flutter_test:
